--- a/w_player/v34/v34.md
+++ b/w_player/v34/v34.md
@@ -1,25 +1,55 @@
 
+
 ---
+```
+
+v34_20 as baseline
+fieldのreload成功　01-07 23:06 
+
+v34_16 as baseline 
+復元ボタンで画面維持成功、relaodでどうなるか
+
+v34_14 as baseline 
+禁止選手対応完了、localstorageが課題 
+
+```
+---
+
 ```
 [実装完了]
 
+再現ボタン設置
+reloadで一旦消えるが、再現ボタンで保存されているデータを呼び出し画面を再構築できる
+
+移動IN：RC替IN,YC替IN、
+追加：YPRO>>YC、YPRO>>RC
+
+
 
 (0)ピッチ外からピッチに戻すと最下位に入ってしまうので、出た場所を空白しておいてそこに戻れるように
+ピッチでは、15シートを準備し、その中に選手を格納する形式にした
+ベンチとピッチ外では、これまで通りエリアに直接選手を格納している
+
+
+(3) 負傷OUT、戦術OUT, RC の再入場不可扱い、
+色分けに備えて、OUT選手とRC選手は分けて管理
+まだ、再入場はできてしまう
 
 (6)イエロー（１０分）、RC（２０分）の選手は一定の時間経過後にピッチに戻ることができる。
 　・対象の選手が復帰する場合よりも、他の選手に入れ替わることが多いため対応できるようにする。
 
-(8)出場選手のなかでポジションの入れ替えができる。
+
+(8)ピッチ上の出場選手のなかでポジションの入れ替えができる。
+
+
 ```
 ---
 ```
+
 [実装未完了]
 
 
 (1) B＋C<=4
-
-
-(3) 負傷OUT、戦術OUT の再入場不可
 
 
 (2)フロントの条件
@@ -42,6 +72,7 @@
 
 (7)イエロー（１０分）、RC（２０分）を足した復帰予定時間を入力できるようにする。
 （エクセルでできていません。テンキーを表示したい）
+
 
 ```
 ---
