--- a/w_player/v36/v36.md
+++ b/w_player/v36/v36.md
@@ -1,1 +1,149 @@
 
+
+---
+```
+
+
+```
+---
+
+```
+[実装完了]
+
+お世話になっております。
+
+進捗がありますので、お知らせします。
+
+https://tztechno.github.io/tz_html_works/w_player/v34
+
+ピッチでは、15シートを準備し、その中に選手を格納する形式にした
+ピッチから出ると空席になるので、そこに戻ることができます。
+ベンチとピッチ外では、これまで通りエリアに直接選手を格納している
+
+ピッチ内のポジション変更は、交代として実行可能になった
+
+再現ボタン設置
+reloadで一旦消えるが、再現ボタンで保存されているデータを呼び出し画面を再構築できる
+
+メニュー調整
+移動IN：RC替IN,YC替IN、
+追記：YPRO>>YC、YPRO>>RC
+
+B+C,負傷OUT、戦術OUT, RC の再入場不可にするところなど、未実装です。
+その他、未実装のところは今後検討します。
+
+よろしくお願いします。
+
+https://tztechno.github.io/tz_html_works/w_player/v34
+
+YC,RCのタイマーは未実装です
+
+
+(3) 負傷OUT、戦術OUT, RC の再入場不可扱い、
+色分けに備えて、OUT選手とRC選手は分けて管理
+まだ、再入場はできてしまう
+
+(6)イエロー（１０分）、RC（２０分）の選手は一定の時間経過後にピッチに戻ることができる。
+　・対象の選手が復帰する場合よりも、他の選手に入れ替わることが多いため対応できるようにする。
+
+
+(8)ピッチ上の出場選手のなかでポジションの入れ替えができる。
+
+
+```
+---
+```
+
+[実装未完了]
+
+
+(1) B＋C<=4
+
+
+(2)フロントの条件
+１から３までの選手は事前に登録された場所にしか出れない。
+
+
+(3)戦術的入替をしてOUTの選手は再び出れない。
+　・OUTした選手は選択しないようにフォントをグレー色に変更。　
+　・負傷した選手はフォントを赤色。
+　※特例があるので、設定で選択できるようにする。
+
+
+(4)8枚交替カードを使い切った場合
+　・OUTのみを選択できるようにする。ＩＮは無し。
+
+
+(5)FPROとはイエロー（YC）、レッド（RC）とレフリーがすぐに判定するのはなく、裏でチェックして判定します。
+　・FPROになったら８分後にYC、RCを選択できるようにする。
+
+
+(7)イエロー（１０分）、RC（２０分）を足した復帰予定時間を入力できるようにする。
+（エクセルでできていません。テンキーを表示したい）
+
+
+```
+---
+```
+
+4.（検討中）ピッチ外からピッチに戻すと最下位に入ってしまうので、出た場所を空白しておいてそこに戻れるようにしてください。
+移動に関して、ピッチから外への移動、ピッチへの移動、のメニューを分離することは実現
+
+
+（２）フロントの条件
+　①１から３までの選手は事前に登録された場所にしか出れない。
+　　例）No１のポジションには、埼玉次郎と行田五郎は入れない。
+　　　　熊谷太郎（１、３）
+　　　　埼玉次郎（２、３）
+　　　　深谷三郎（１、２）
+　　　　行田五郎（　　　　　　　　　んb　　）
+
+
+
+＝≡　②その他４から１５には制限はない。
+　　　　熊谷太郎（１、３）は４番以降にも入れる。入れないのは２番のみとなる。
+（疑問）熊谷太郎が４番に入る時、元４番の選手は出場できなくなる？
+（疑問）１−3のポジションに入れる選手が２人だけになる？
+
+（３）戦術的入替をしてOUTの選手は再び出れない。
+　・OUTした選手は選択しないようにフォントをグレー色に変更。　
+　・負傷した選手はフォントを赤色。
+　※特例があるので、設定で選択できるようにする。
+
+（疑問）負傷OUTだけでなく戦術OUTもピッチIN禁止か？
+
+（４）8枚交替カードを使い切った場合
+　・OUTのみを選択できるようにする。ＩＮは無し。
+
+（５）FPROとはイエロー（YC）、レッド（RC）とレフリーがすぐに判定するのはなく、裏でチェックして判定します。
+　・FPROになったら８分後にYC、RCを選択できるようにする。
+
+（疑問）FPRO復帰は存在しないのでは
+（疑問）RC復帰もあり得るのか（-->RCをピッチIN禁止にするのは間違い？）
+
+（６）イエロー（１０分）、RC（２０分）の選手は一定の時間経過後にピッチに戻ることができる。
+　・対象の選手が復帰する場合よりも、他の選手に入れ替わることが多いため対応できるようにする。
+
+（対応案）移動メニューにYC替復帰、RC替復帰を加える
+　
+（７）イエロー（１０分）、RC（２０分）を足した復帰予定時間を入力できるようにする。（エクセルでできていません。テンキーを表示したい）
+
+（８）出場選手のなかでポジションの入れ替えができる。
+（疑問）選手交代の時、入る選手の番号はポジション番号であるべきでは？
+（疑問）番号がポジションを示すなら、１６番以降の数字の意味は何？
+（対応案）
+　　１
+　　２
+　　３　バデーライアン
+　　４　マイケルストバーグ
+　　５　
+入替後
+　　1
+　　２
+　　４　マイケルストバーグ
+　　３　バデーライアン
+　　５
+```
+---
+
+
