--- a/x_image_gallery/v05/v05.md
+++ b/x_image_gallery/v05/v05.md
@@ -1,1 +1,30 @@
 リダイレクト対応
+
+リダイレクト先のURLを取得するために、fetchを使って実際のURLを確認する機能を追加しましょう。
+
+```
+
+主な変更点は以下の通りです：
+
+1. `getFinalUrl()`関数の追加
+   - fetchのHEADメソッドを使用してリダイレクト先のURLを取得
+   - エラー処理を含み、失敗した場合は元のURLを返す
+
+2. `extractUrls()`の非同期化
+   - async/awaitを使用してリダイレクト解決を実装
+   - ハイパーリンクとテキストURLの両方でリダイレクトチェックを実行
+
+3. `generateHtml()`の非同期化
+   - extractUrls()が非同期になったため、これも非同期関数に変更
+
+注意点：
+- CORSポリシーにより、一部のURLではリダイレクトの確認ができない場合があります
+- そのような場合は元のURLが使用されます
+- セキュリティ上の理由で、一部のサーバーではHEADリクエストを許可していない場合があります
+
+このコードを使用する際は、以下のような点に注意してください：
+1. すべての関数呼び出しで`await`キーワードを使用する
+2. イベントハンドラーでも非同期処理を適切に扱う
+3. エラーハンドリングを必要に応じて追加する
+
+```
