--- a/x_image_gallery/v05/v05.md
+++ b/x_image_gallery/v05/v05.md
@@ -1,6 +1,6 @@
-リダイレクト対応
+### リダイレクト対応
 
-リダイレクト先のURLを取得するために、fetchを使って実際のURLを確認する機能を追加しましょう。
+リダイレクト先のURLを取得するために、fetchを使って実際のURLを確認する機能を追加
 
 ```
 
