--- a/x_image_gallery/v05/v05.md
+++ b/x_image_gallery/v05/v05.md
@@ -28,3 +28,26 @@
 3. エラーハンドリングを必要に応じて追加する
 
 ```
+
+```
+はい、その通りです。例えば:
+
+1. 元のURL: `https://t.co/abc123` (Twitterの短縮URL)
+2. リダイレクト後: `https://example.com/actual-page` (実際のページURL)
+
+この場合、抽出結果には`https://example.com/actual-page`が表示されます。
+
+これには以下のようなメリットがあります：
+- 実際の最終的なURLがわかるため、同じページへの異なる短縮URLが重複として除外される
+- セキュリティ面で、リダイレクト先を事前に確認できる
+- 保存されるHTMLファイルに最終的なURLが含まれるため、より永続的なリンクとなる
+
+ただし、先ほど触れたように、以下の制限があります：
+- CORSポリシーによる制限
+- サーバーがHEADリクエストを許可していない場合
+- リダイレクトチェーンが長い場合の処理時間
+
+これらの場合は、元のURLがそのまま使用されます。
+実装をカスタマイズして、リダイレクトの解決に失敗した場合は元のURLと最終URLの両方を表示するようにすることも可能です。そのような変更が必要でしょうか？
+
+```
